summative.moria.Moria.scala.error
Compilation error:
Moria:11: error: value =- is not a member of Int
                                             pos=-1}}}
                                                ^